# STM32F407_ESP8266_MQTT_Website

./: .gitignore  .mxproject  1_LED.ioc  CMakeLists.txt  CubeMX_精简工程配置说明.md  DELIVERY_NOTE.md  README.md  STM32F407XX_FLASH.ld  WIFI.ioc  main_drawboard_optimized_example.c
.superpowers/brainstorm/sensor-dashboard/content/: layout-options.html
.superpowers/brainstorm/sensor-dashboard/state/: server-info
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  main_sdio_example.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
Debug/44-音乐播放器实验/: Template.uvguix.Administrator  Template.uvguix.YZ  Template.uvoptx  Template.uvprojx
Debug/44-音乐播放器实验/APP/flash/: flash.h
Debug/44-音乐播放器实验/APP/i2s/: i2s.c  i2s.h
Debug/44-音乐播放器实验/APP/iic/: iic.c
Debug/44-音乐播放器实验/APP/sd/: sdio_sdcard.c
Debug/44-音乐播放器实验/APP/tftlcd/: tftlcd.c  tftlcd.h
Debug/44-音乐播放器实验/APP/wm8978/: wm8978.c  wm8978.h
Debug/44-音乐播放器实验/AudioDecod/: audioplay.c  audioplay.h
Debug/44-音乐播放器实验/AudioDecod/wav/: wavplay.c  wavplay.h
Debug/44-音乐播放器实验/Fatfs/src/: diskio.c
Debug/44-音乐播放器实验/Font/: font_update.c
Debug/44-音乐播放器实验/Public/: system.h
Debug/44-音乐播放器实验/User/: main.c
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_timebase_rtc_alarm_template.c  stm32f4xx_hal_timebase_rtc_wakeup_template.c
Malloc/: malloc.c
PCtoLCD2002完美版/: PCtoLCD2002.INI  notice.txt  readme2002.txt
Project/: .mxproject  CMakeLists.txt  MAIN_FLOW.md  README.md  WIFI.ioc
Project/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Project/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
Project/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_rtc_ex.c
Project/LWIP/App/: lwip.c
Project/Malloc/: README.md  malloc.h
Project/cmake/stm32cubemx/: CMakeLists.txt
Website/: README.md
Website/aliyun-iot-dashboard/: README.md  package-lock.json  package.json
Website/aliyun-iot-dashboard/client/: app.js  index.html  style.css
Website/aliyun-iot-dashboard/desktop/: main.js
Website/aliyun-iot-dashboard/docs/superpowers/plans/: 2026-05-24-industrial-control-room-restyle.md
Website/aliyun-iot-dashboard/docs/superpowers/specs/: 2026-05-24-industrial-control-room-design.md
Website/aliyun-iot-dashboard/server/: .env.example  device_simulator.js  package-lock.json  package.json  server.js  test_query.js
build-codex-wifi/: CMakeCache.txt
cmake/stm32cubemx/: CMakeLists.txt
doc/: FONT_STORAGE_IMPLEMENTATION_REPORT.md  PROJECT_GUIDE.md  UI_SPLIT_GUIDE.md
docs/superpowers/plans/: 2026-04-23-sd-image-display.md  2026-05-07-mp3-module-verification.md
docs/superpowers/specs/: 2026-05-17-font-boot-design.md
tools/font_gen/: make_hzk16.py
tools/font_gen/output/: HZK16
